--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 <div class="container">
     <div class="flex flex-col md:flex-row px-4">
         <div class="flex justify-between items-center px-4 py-4 md:py-0 border-b border-gray-700 md:border-b-0">
-            <div class=""><a href="#" class="uppercase font-semibold text-gray-100 md:mr-4 tracking-widest">Resaendr</a></div>
+            <div class=""><a href="#" class="uppercase font-semibold text-gray-100 md:mr-4 tracking-widest">Portfolio</a></div>
             <div class="nav-toggler">
                 <button class="items-center">
                     <svg class="transition duration-500 ease-in-out w-6 h-6 outline-none text-gray-100 block md:hidden" className="w-6 h-6" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fillRule="evenodd" d="M3 5a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1zM3 15a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z" clipRule="evenodd" /></svg>
@@ -265,8 +265,7 @@
     </section>
 </div>
 
-<!-- ================== TIDAK BOLEH DIHAPUS ========================== -->
-<!-- Copyright Resa Endrawan https://www.facebook.com/resa.endrawan56/ -->
+
 <div class="footer mt-16 bg-gray-700 py-4 text-gray-50">
     <div class="text-center">
         <span>2021 &copy; Made with love by <a href="https://rend.my.id" class="font-semibold hover:text-gray-800">kaka</a></span>
