--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 
                 <!-- social for mobile -->
                 <div class="flex md:hidden align-center justify-around">
-                <a href="https://github.com/kakaalma27"><i class="text-gray-50 hover:text-gray-300 transition duration-300 ease-in-out fab fa-github text-xl"></i></a>
+                <a href="https://github.com/Xrodikz"><i class="text-gray-50 hover:text-gray-300 transition duration-300 ease-in-out fab fa-github text-xl"></i></a>
                 </div>
             </div>
         </div>
@@ -86,7 +86,7 @@
                     <h2 class="block text-xl lg:text-4xl">Alma Muhamad Apriana</h2>
                     <p class="text-sm opacity-70 mt-2">Frontend Website Developer</p>
                     <div class="mt-3 md:mt-5 space-x-6">
-                        <a href="https://github.com/kakaalma27">
+                        <a href="https://github.com/Xrodikz">
                             <i class="fab fa-github md:text-2xl hover:text-gray-300 transition duration-300 ease-in-out"></i>
                         </a>
                     </div>
